# chatgpt-cli

./: .gitignore  .pylintrc  README.md  TESTING.md  chatgpt  claude  llm-cli  pyproject.toml  requirements.txt  run.sh  setup.sh
llmcli/: args.py  help.py  llmcli.py  message.py  util.py
llmcli/adapters/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
llmcli/messages/: __init__.py  file_message.py  image_message.py  message.py
llmcli/util/: __init__.py  get_model_adapter.py
tests/: test_llmcli.py  test_message.py  test_util.py
tests/adapters/: test_anthropic.py  test_base.py  test_ollama.py  test_openai.py
tests/fixtures/: messages.py
